<resources>
    <string name="app_name">TeleMedConnect</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="telemedconnect">TeleMedConnect</string>
    <string name="your_doctor_one_tap_away">Your Doctor, One tap away</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_content_desc">description</string>
    <string name="onboarding_title_1">Video consult top doctors from the comfort of your home.</string>
    <string name="onboarding_desc_1">These are Specialists in their respective fields, which includes Brain &amp; Nervous system.</string>
    <string name="onboarding_title_2">Communicate in the best &amp; effective way possible.</string>
    <string name="onboarding_desc_2">Time &amp; health are two precious assets that we don’t compromise on.</string>
    <string name="frame">frame</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="welcome_back_you_have_been_missed">Welcome back! You have been missed.</string>
    <string name="email">Email</string>
    <string name="example_email_com">example@email.com</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="password_input">Password input box</string>
    <string name="email_input_box">Email input box</string>
    <string name="_8_characters_minimum">8 characters minimum</string>
    <string name="remember_for_30_days">Remember for 30 days</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with">or Sign In With</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_get_you_started_please_enter_your_details">Let\'s get you started. Please enter your details.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_">Continue</string>
    <string name="by_clicking_continue_you_agree_to_accept_our">By clicking \"Continue\", you agree to accept our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="password_strength">Password Strength:</string>
    <string name="privacy_policy_text">
        <![CDATA[
        <p><b>Effective Date:</b> 05/07/2024</p>

        <p>Welcome to <b>TeleMedConnect</b>. Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our telemedicine services. Please read this policy carefully. If you do not agree with the terms of this privacy policy, please do not use our services.</p>

        <h2>1. Information We Collect</h2>

        <h3>1.1 Personal Information</h3>

        <p>We collect personal information that you provide to us directly when you register for an account, use our services, or communicate with us. This information may include:</p>

        <ul>
            <li>Name</li>
            <li>Email Address</li>
            <li>Phone Number</li>
            <li>Date of Birth</li>
            <li>Gender</li>
            <li>Medical History</li>
            <li>Insurance Information</li>
            <li>Payment Information</li>
            <li>Other information you provide during your interaction with our services</li>
        </ul>

        <h3>1.2 Health Information</h3>

        <p>As a telemedicine service, we may collect health-related information that you provide during consultations with healthcare providers, including but not limited to:</p>

        <ul>
            <li>Medical Symptoms</li>
            <li>Diagnosis</li>
            <li>Treatment Plans</li>
            <li>Prescriptions</li>
            <li>Lab Results</li>
            <li>Medical Records</li>
        </ul>

        <h3>1.3 Usage Data</h3>

        <p>We may automatically collect information about your device and how you interact with the App, including:</p>

        <ul>
            <li>Device Information: IP address, device type, operating system, unique device identifiers.</li>
            <li>Usage Information: Access times, pages viewed, links clicked, and the page you visited before navigating to our App.</li>
        </ul>

        <h2>2. How We Use Your Information</h2>

        <p>We use the information we collect to:</p>

        <ul>
            <li>Provide and Improve Services: To deliver and enhance the telemedicine services you request, including consultations, treatment recommendations, and follow-up care.</li>
            <li>Communication: To communicate with you about your appointments, updates, and notifications related to your health and the App.</li>
            <li>Billing and Payments: To process payments for services and manage your account.</li>
            <li>Compliance: To comply with legal and regulatory requirements, including reporting as required by law.</li>
            <li>Marketing: To provide you with information about our services, new features, or other opportunities that may be of interest to you, subject to your preferences.</li>
        </ul>

        <h2>3. How We Share Your Information</h2>

        <p>We may share your information in the following circumstances:</p>

        <ul>
            <li>With Healthcare Providers: To deliver telemedicine services, your information will be shared with healthcare professionals as necessary for diagnosis and treatment.</li>
            <li>Service Providers: With third-party service providers who assist us in delivering our services, such as payment processors, cloud storage providers, and analytics services.</li>
            <li>Legal Requirements: If required by law or in response to a legal request, such as a subpoena, court order, or government investigation.</li>
            <li>Business Transfers: In connection with a merger, acquisition, or sale of all or a portion of our assets.</li>
        </ul>

        <h2>4. Security of Your Information</h2>

        <p>We implement a variety of security measures to maintain the safety of your personal information. However, no method of transmission over the Internet or method of electronic storage is completely secure. We cannot guarantee the absolute security of your information.</p>

        <h2>5. Your Choices and Rights</h2>

        <ul>
            <li>Access and Correction: You may access, update, or correct your personal information by logging into your account or contacting us directly.</li>
            <li>Data Deletion: You may request that we delete your personal information, subject to certain legal requirements.</li>
            <li>Opt-Out: You can opt out of receiving promotional communications from us by following the unsubscribe instructions in those communications or contacting us.</li>
        </ul>

        <h2>6. Children’s Privacy</h2>

        <p>Our services are not directed to children under the age of 13, and we do not knowingly collect personal information from children under 13. If we learn that we have collected information from a child under 13, we will take steps to delete the information as soon as possible.</p>

        <h2>7. Changes to This Privacy Policy</h2>

        <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on our App and updating the “Effective Date” at the top of this page. You are advised to review this Privacy Policy periodically for any changes.</p>

        <h2>8. Contact Us</h2>

        <p>If you have any questions or concerns about this Privacy Policy or our data practices, please contact us at:</p>

        <p>Email: [support@yourapp.com]</p>
        <p>Phone: [+1 (123) 456-7890]</p>
        <p>Address: [123 Health Ave, City, State, ZIP]</p>
        ]]>
    </string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="search_for_your_health_insurance_provide_to_see_if_youre_covered">Add your health insurance provide to see if you\'re covered.</string>
    <string name="save">Save</string>
    <string name="skip_insurance">Skip Insurance</string>
    <string name="you_can_see_a_doctor_without_insurance">You can see a doctor without insurance</string>
    <string name="click_to_search">Click to search</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="enter_insurance_policy_number">Enter Insurance Policy Number</string>
    <string name="enter_insurance_company">Enter Insurance Company</string>
    <string name="insurance_policy_number">Insurance Policy Number</string>
    <string name="code_verification">Code Verification</string>
    <string name="please_enter_the_code_we_sent_to_email">Please enter the code we sent to email</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="book_appointment">Book Appointment</string>
    <string name="enter_purpose">Enter purpose</string>
    <string name="end_time">End Time</string>
    <string name="___">:</string>
    <string name="start_time">Start Time</string>
    <string name="doctor_s_profile">Doctor\'s Profile</string>
    <string name="date">Date</string>
</resources>