<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.TeleMedConnect">

    <data>
        <variable
            name="viewModel"
            type="com.telemedconnect.patient.ui.view_models.InsuranceViewModel" />

        <variable
            name="activity"
            type="com.telemedconnect.patient.ui.activities.InsuranceActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                style="@style/SplashSubTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/health_insurance" />

            <TextView
                android:id="@+id/prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey"
                android:text="@string/search_for_your_health_insurance_provide_to_see_if_youre_covered" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/light_grey"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:hint="@string/click_to_search"
                android:text="@string/insurance_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/InputTitleText"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/insurance_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                style="@style/TextInputLayout.NoBackground">

                <EditText
                    android:id="@+id/insurance_name"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_text_input"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_insurance_company"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="5dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:insuranceProvider="@={viewModel.insuranceProvider}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:hint="@string/click_to_search"
                android:text="@string/insurance_policy_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insurance_name_input_layout"
                style="@style/InputTitleText"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_text_input"
                android:gravity="center_vertical"
                android:hint="@string/enter_insurance_policy_number"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@={viewModel.insurancePolicyId}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/save"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->activity.onSave()}"
            style="@style/PrimaryButtonStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/skip_insurance"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->activity.onSkip()}"
            style="@style/SecondaryButtonStyle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/you_can_see_a_doctor_without_insurance"/>

    </LinearLayout>

</layout>