<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.TeleMedConnect">

    <data>

        <variable
            name="activity"
            type="com.telemedconnect.patient.ui.activities.CodeVerificationActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_verification"
                android:layout_marginTop="100dp"
                style="@style/SplashSubTitleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/please_enter_the_code_we_sent_to_email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                tools:text="example@email.com"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <EditText
                    android:id="@+id/otp_digit_1"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_text_input"
                    android:importantForAutofill="no"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/otp_digit_2"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_text_input"
                    android:importantForAutofill="no"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/otp_digit_3"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_text_input"
                    android:importantForAutofill="no"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:id="@+id/otp_digit_4"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_text_input"
                    android:importantForAutofill="no"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:imeOptions="actionNext"
                    android:layout_margin="4dp"
                    android:clickable="true"
                    tools:ignore="LabelFor"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/didn_t_receive_otp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                app:resendCountDown="@{activity.time}"/>

            <TextView
                android:id="@+id/resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:textColor="@color/cl_blue_text"
                android:text="@string/resend_code"
                android:onClick="@{()->activity.resendCode()}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/verify"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{()->activity.onVerify()}"
                style="@style/PrimaryButtonStyle"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>